--- a/index.html
+++ b/index.html
@@ -1,49 +1,45 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link type="text/css" rel="stylesheet" href="css/style.css" />
-		<link type="text/css" rel="stylesheet" href="css/fontawesome/css/all.css" />
-		<!-- <link type="font" name="Amsterdam" subtype="TrueType" src="font/Amsterdam.ttf"> -->
-		<link rel="icon" href="img/logo.jpg"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<meta property="og:title" content="Harmonic Home Cleaning" />
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://harmonichomecleaning.com" />
-		<meta property="og:description" content="UI/UX Development" />
-		<meta charset="UTF-8">
-		<title>Harmonic Home Cleaning</title>
-		<!-- <script src='https://square.site/appointments/buyer/widget/qiqkux8qawb6c8/LW0JWH0C7Z928.js'></script> -->
-	</head>
+<head>
+	<link type="text/css" rel="stylesheet" href="css/style.css" />
+	<link type="text/css" rel="stylesheet" href="css/fontawesome/css/all.css" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<!-- <link type="font" name="Amsterdam" subtype="TrueType" src="font/Amsterdam.ttf"> -->
+	<link rel="icon" href="img/80auto-logo2.png" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<body>
-		<div class="contain">
-			<img id="hp_logo" src="img/logo.jpg">
-			<h1>Harmonic Home Cleaning</h1>
-			<p id="subtitle">Harmonic Home Cleaning is an owner-operated residential cleaning company serving Round Rock, Texas. We are committed to offering superior detail in restoring your home to harmony.</p>
-			<div id="action">
-				<a href="https://square.site/book/LW0JWH0C7Z928/harmonic-home-cleaning-llc" class="button">Book a cleaning</a>
-				<p id="or">or</p>
-				<div id="contact">
-					<h4>Schedule a free in-home consultation</h4>
-					<a href="mailto:hello@harmonichomecleaning.com">
-						<i class="fas fa-envelope"></i>
-						<p>hello@harmonichomecleaning.com</p></a>
-					<a href="tel:602-510-9998">
-						<i class="fas fa-phone"></i>
-						<p>(602) 510-9998</p>
-					</a>
-				</div>
-			</div>
-			<div class="icons">
-				<a href="https://www.instagram.com/harmonic_home_cleaning/">
-					<i class="fab fa-instagram"></i>
-				</a>
-				<a href="https://www.facebook.com/harmonichomecleaning">
-					<i class="fab fa-facebook-f"></i>
-				</a>
-			</div>
+	<meta property="og:title" content="80 auto" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://80autodfw.com" />
+	<meta property="og:description" content="Queer-owned, independent auto repair supporting the greater Dallas LGBTQIA+ community." />
+	<meta charset="UTF-8">
+	<title>80 auto</title>
+</head>
 
+<body>
+	<div class="contain d-flex flex-column align-items-center">
+
+		<img id="logo" src="img/80auto-mirror.png" title="80 auto" class="my-3">
+
+		<h1 class="d-none">80 auto</h1>
+
+		<p class="text-center">Queer-owned, independent auto repair supporting the greater Dallas LGBTQIA+ community.</p>
+
+		<p class="text-center locations">DALLAS PLANO FRISCO RICHARDSON GARLAND MESQUITE MCKINNEY</p>
+
+
+
+		<div class="icons">
+			<a href="https://www.instagram.com/harmonic_home_cleaning/">
+				<img class="icon" src="img/phone.png">
+			</a>
+			<a href="https://www.facebook.com/harmonichomecleaning">
+				<img class="icon" src="img/mail.png">
+			</a>
 		</div>
-  </body>
+
+	</div>
+</body>
+
 </html>
