--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
 			<h1 class="d-none">80 auto</h1>
 
-			<p class="text-center">Queer-owned, independent auto repair supporting the greater Dallas LGBTQIA+ community.</p>
+			<p class="subtitle text-center">Queer-owned, independent auto repair supporting the greater Dallas LGBTQIA+ community.</p>
 
-			<p class="text-center locations">DALLAS PLANO FRISCO RICHARDSON<br>GARLAND MESQUITE MCKINNEY</p>
+			<p class="text-center locations">DALLAS - PLANO - FRISCO - RICHARDSON<br>GARLAND - MESQUITE - MCKINNEY</p>
 
 			<!-- Icons mobile -->
-			<div class="icons icons-m d-md-none">
+			<div class="icons icons-m d-flex d-md-none">
 				<a href="sms:+1-469-758-8882">
 					<img class="icon" src="img/sms.png">
 					469-758-8882
@@ -88,7 +88,7 @@
 				</li>
 				<li>
 					<img class="icon" src="img/check.png">
-					<span>On site or in our Garland workshop</span>
+					<span>On site or drop off</span>
 				</li>
 			</ul>
 		</section>
@@ -97,12 +97,12 @@
 		<section id="about" class="row">
 
 			<!-- Mobile name -->
-			<div class="d-md-none">
+			<div class="d-flex d-md-none flex-column align-items-center mt-3">
 				<h2>Aidy Fee</h2>
 				<p class="pronouns">(she/her)</p>
 			</div>
 
-			<div class="col-12 col-md-6">
+			<div class="col-12 col-md-6 px-3 px-md-0">
 				<picture>
 					<source srcset="./img/aidy.jpg?$staticlink$" media="(min-width: 769px)">
 					<img class="img-fluid" src="./img/m_aidy.jpg?$staticlink$" alt="">
@@ -110,8 +110,9 @@
 			</div>
 
 			<!-- Desktop copy -->
-			<div class="col-12 col-md-6">
-				<div class="d-none d-md-block">
+			<div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center mt-3">
+				<!-- Mobile name -->
+				<div class="d-none d-md-flex flex-column align-items-center">
 					<h2>Aidy Fee</h2>
 					<p class="pronouns">(she/her)</p>
 				</div>
