--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<link type="text/css" rel="stylesheet" href="css/style.css" />
 	<link type="text/css" rel="stylesheet" href="css/fontawesome/css/all.css" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-	<!-- <link type="font" name="Amsterdam" subtype="TrueType" src="font/Amsterdam.ttf"> -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet">
 	<link rel="icon" href="img/80auto-logo2.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -21,15 +23,17 @@
 	<main class="container d-flex flex-column align-items-center">
 
 		<!-- Icons desktop -->
-		<div class="icons icons-d d-none d-md-flex">
-			<a href="sms:+1-469-758-8882">
-				<img class="icon" src="img/sms.png">
-				469-758-8882
-			</a>
-			<a href="mailto: 80autodfw@gmail.com">
-				<img class="icon" src="img/mail.png">
-				80autodfw@gmail.com
-			</a>
+		<div class="heading icons">
+			<div class="heading-inner d-flex">
+				<a href="sms:+1-469-758-8882">
+					<img class="icon" src="img/sms.png">
+					469-758-8882
+				</a>
+				<a href="mailto:80autodfw@gmail.com">
+					<img class="icon" src="img/mail.png">
+					80autodfw@gmail.com
+				</a>
+			</div>
 		</div>
 
 		<!-- Intro -->
@@ -41,18 +45,6 @@
 			<p class="subtitle text-center">Queer-owned, independent auto repair supporting the greater Dallas LGBTQIA+ community.</p>
 
 			<p class="text-center locations">DALLAS - PLANO - FRISCO - RICHARDSON<br>GARLAND - MESQUITE - MCKINNEY</p>
-
-			<!-- Icons mobile -->
-			<div class="icons icons-m d-flex d-md-none">
-				<a href="sms:+1-469-758-8882">
-					<img class="icon" src="img/sms.png">
-					469-758-8882
-				</a>
-				<a href="mailto: 80autodfw@gmail.com">
-					<img class="icon" src="img/mail.png">
-					80autodfw@gmail.com
-				</a>
-			</div>
 		</section>
 
 		<!-- Bullets -->
@@ -97,7 +89,7 @@
 		<section id="about" class="row">
 
 			<!-- Mobile name -->
-			<div class="d-flex d-md-none flex-column align-items-center mt-3">
+			<div class="d-flex d-md-none flex-column align-items-center mt-4">
 				<h2>Aidy Fee</h2>
 				<p class="pronouns">(she/her)</p>
 			</div>
