--- a/index.html
+++ b/index.html
@@ -25,14 +25,9 @@
 		<!-- Icons desktop -->
 		<div class="heading icons">
 			<div class="heading-inner d-flex">
-				<a href="sms:+1-469-758-8882">
-					<img class="icon" src="img/sms.png">
-					469-758-8882
-				</a>
-				<a href="mailto:80autodfw@gmail.com">
-					<img class="icon" src="img/mail.png">
-					80autodfw@gmail.com
-				</a>
+				<a href="sms:+1-469-758-8882?&body=Hi there, I would like to get a quote for some work on a vehicle."><img class="icon" src="img/sms.png"></a>
+				<a href="tel:+1-469-758-8882"><img class="icon" src="img/phone.png"></a>
+				<a href="mailto:80autodfw@gmail.com?subject=Quote for auto work&body=Hi Aidy, I would like to get a quote for some work on a vehicle."><img class="icon" src="img/mail.png"></a>
 			</div>
 		</div>
 
@@ -42,51 +37,27 @@
 
 			<h1 class="d-none">80 auto</h1>
 
-			<p class="subtitle text-center">Queer-owned, independent auto repair supporting the greater Dallas LGBTQIA+ community.</p>
+			<p class="subtitle text-center my-3">Queer-owned, independent auto repair supporting the greater Dallas LGBTQIA+ community.</p>
 
-			<p class="text-center locations">DALLAS - PLANO - FRISCO - RICHARDSON<br>GARLAND - MESQUITE - MCKINNEY</p>
+			<p class="text-center locations my-3">DALLAS - PLANO - FRISCO - RICHARDSON<br>GARLAND - MESQUITE - MCKINNEY</p>
 		</section>
 
 		<!-- Bullets -->
 		<section id="bullets">
 			<ul>
-				<li>
-					<img class="icon" src="img/check.png">
-					<span>Brakes</span>
-				</li>
-				<li>
-					<img class="icon" src="img/check.png">
-					<span>Electrical</span>
-				</li>
-				<li>
-					<img class="icon" src="img/check.png">
-					<span>Suspension</span>
-				</li>
-				<li>
-					<img class="icon" src="img/check.png">
-					<span>Service + tune up</span>
-				</li>
-				<li>
-					<img class="icon" src="img/check.png">
-					<span>Pre-trip inspection</span>
-				</li>
-				<li>
-					<img class="icon" src="img/check.png">
-					<span>Domestic & import</span>
-				</li>
-				<li>
-					<img class="icon" src="img/check.png">
-					<span>Flexible rates</span>
-				</li>
-				<li>
-					<img class="icon" src="img/check.png">
-					<span>On site or drop off</span>
-				</li>
+				<li>Brakes</li>
+				<li>Electrical</li>
+				<li>Suspension</li>
+				<li>Service + tune up</li>
+				<li>Pre-trip inspection</li>
+				<li>Domestic & import</li>
+				<li>Flexible rates</li>
+				<li>On site or drop off</li>
 			</ul>
 		</section>
 
 		<!-- About Aidy -->
-		<section id="about" class="row">
+		<section id="about" class="d-md-flex">
 
 			<!-- Mobile name -->
 			<div class="d-flex d-md-none flex-column align-items-center mt-4">
@@ -119,12 +90,29 @@
 		<!-- Testimonials -->
 		<section id="testimonials">
 			<div>
-				<p>“Aidy worked on a few projects on my and my wife’s cars. Her incredible experience and level headed, kind demeanor made some very frustrating jobs look easy, and charged fair prices.”</p>
-				<p>Forest <span class="pronouns">(they/them)</span></p>
+				<p class="quote">“Aidy worked on a few projects on my and my wife’s cars. Her incredible experience and level headed, kind demeanor made some very frustrating jobs look easy, and charged fair prices.”</p>
+				<p class="name">Forest <span class="pronouns">(they/them)</span></p>
+			</div>
+		</section>
+
+		<!-- Contact -->
+		<section id="contact">
+			<div class="contact-inner">
+				<h2 class="h4 my-3">Get a Quote</h2>
+				<div class="contact icons">
+					<a href="sms:+1-469-758-8882?&body=Hi there, I would like to get a quote for some work on a vehicle."><img class="icon" src="img/sms.png"> 469-758-8882</a>
+
+					<a href="tel:+1-469-758-8882"><img class="icon" src="img/phone.png"> 469-758-8882</a>
+					<a href="mailto:80autodfw@gmail.com?subject=Quote for auto work&body=Hi Aidy, I would like to get a quote for some work on a vehicle."><img class="icon" src="img/mail.png"> 80autodfw@gmail.com</a>
+				</div>
 			</div>
 		</section>
 
 	</main>
+
+	<footer>
+		<a href="https://ohkayblanket.com" target="_blank" id="copyright" class="text-center">&copy; 2024 ohkayblanket.com</a>
+	</footer>
 </body>
 
 </html>
